@@ -119,17 +119,6 @@ the program.
 
 <p>
 
-<h3>How do you make a living?</h3>
-
-<p>
-Good question. We started LilyPond in 1996, and we always did it as an
-unpaid hobby. We would like to change that.  Since we are not selling
-the program, we sell our expertise. Practically speaking, you can pay
-us for implementing features, or you can hire us for engraving music
-or doing typography research. Contact us privately if you are
-interested.
-<p>
-
 
 <h3>How can I thank you for LilyPond?</h3>
 
