@@ -16,18 +16,19 @@ integrate music into LaTeX or HTML seamlessly. Create books with music
 fragments, from a single source file!
 
 <p>
-Part extraction is done automatically.  The input file contains the
+Part extraction is done automatically (<a href="howto.html#orchestral">demo</a>).  The input file contains the
 music itself. Since parts and score are generated from the same
-source, they are always in sync.
+source, they are always in sync. In addition, LilyPond can combine
+staves in scores and insert cue-notes from other parts.
 
 
 <h2>High-quality automated layout</h2>
 
 We put our expertise is in the program, so you do not have to worry
-about layout. LilyPond will format scores for you, determining spacing
-by itself, breaking lines automatically to provide tight but uniform
-page layout.  Clashes between lyrics, notes, and chords are resolved
-and slurs and beams are sloped automatically.
+about layout. LilyPond produces ready-to-print PDF files, determining
+spacing by itself and breaking lines to provide tight but uniform page
+layout.  Clashes between lyrics, notes, and chords are resolved and
+slurs and beams are sloped, <em>automatically</em>!
 
 <img src="@IMAGES@flat-design.png" align="right">
 <p>
